# kgnn-rffi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: manysig.yaml  manysig_soda4.yaml  manytx.yaml  manytx_owen_v0.yaml
diagnostic/: __init__.py  compact.py  config.py  datasets.py  osr.py  sourceonly.py  splits.py
docs/: BASELINES.md  DATA.md
dpr_rffi/: __init__.py  losses.py  metrics.py  model.py  perturbations.py  screening.py  training.py
dpr_rffi/baselines/: __init__.py  hyperrsi.py  medae.py  metric_learning.py  opensvdd.py  ossei2025.py  posthoc.py
kgnn/: __init__.py  envelope.py  metrics.py  perturbation.py  phantom.py  utils.py
kgnn/baselines/: __init__.py  hyperrsi.py  medae.py  metric_learning.py  opensvdd.py  ossei2025.py  posthoc.py  soda_three_state.py
scripts/: ablate_augmentation.py  ablate_ratio.py  analyze_gate.py  build_assets.py  compare_aug.py  run.py  run_paper_matrix.py  run_protocol.py  run_shared_baselines.py  summarize_results.py  test_pure_ratio.py  visualize_dpr.py
tests/: test_metrics_and_baselines.py  test_model.py  test_perturbations.py  test_screening.py
