[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpr-rffi"
version = "1.0.0"
description = "Dual Perturbation References for open-set RF fingerprint identification under domain shift"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Yuan Zhong"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "torch>=2.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["dpr_rffi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
